[update]: Updates hello-friend-ng to latest
- Migrates to using rose-pine based palette
- Switches to Cascadia Code for monospace elements
- Updates /uses with 2025 related details

--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -1,424 +1,397 @@
-/**
- * Nord Theme Originally by Arctic Ice Studio
- * https://nordtheme.com
- *
- * Ported for PrismJS by Zane Hitchcoxc (@zwhitchcox) and Gabriel Ramos (@gabrieluizramos)
+code,
+pre,
+code[class*="language-"],
+pre[class*="language-"] {
+    font-family:
+        ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+        "DejaVu Sans Mono", monospace;
+    font-feature-settings: "calt", "liga", "ss01";
+    background: none !important;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+[data-theme="dark"] {
+    /**
+   * MIT License
+   * Rosé Pine Theme
+   * https://github.com/rose-pine
+   * Ported for PrismJS by fvrests [@fvrests]
+   */
+
+    code[class*="language-"],
+    pre[class*="language-"] {
+        color: #e0def4;
+        background: #232136;
+
+        @media print {
+            text-shadow: none;
+        }
+    }
+
+    /* Selection */
+    code[class*="language-"]::-moz-selection,
+    pre[class*="language-"]::-moz-selection,
+    code[class*="language-"] ::-moz-selection,
+    pre[class*="language-"] ::-moz-selection {
+        background: #44415a;
+    }
+
+    code[class*="language-"]::selection,
+    pre[class*="language-"]::selection,
+    code[class*="language-"] ::selection,
+    pre[class*="language-"] ::selection {
+        background: #44415a;
+    }
+
+    /* Code (block & inline) */
+    :not(pre) > code[class*="language-"],
+    pre[class*="language-"] {
+        color: #e0def4;
+        background: #232136;
+    }
+
+    /* Code blocks */
+    pre[class*="language-"] {
+        padding: 1em;
+        margin: 0.5em 0;
+        overflow: auto;
+    }
+
+    /* Inline code */
+    :not(pre) > code[class*="language-"] {
+        padding: 0.1em;
+        border-radius: 0.3em;
+        white-space: normal;
+        color: #e0def4;
+        background: #232136;
+    }
+
+    /* Text style & opacity */
+    .token.entity {
+        cursor: help;
+    }
+
+    .token.important,
+    .token.bold {
+        font-weight: bold;
+    }
+
+    .token.italic,
+    .token.selector,
+    .token.doctype,
+    .token.attr-name,
+    .token.inserted,
+    .token.deleted,
+    .token.comment,
+    .token.prolog,
+    .token.cdata,
+    .token.constant,
+    .token.parameter,
+    .token.url {
+        font-style: italic;
+    }
+
+    .token.url {
+        text-decoration: underline;
+    }
+
+    .namespace {
+        opacity: 0.7;
+    }
+
+    /* Syntax highlighting */
+    .token.constant {
+        color: #e0def4;
+    }
+
+    .token.comment,
+    .token.prolog,
+    .token.cdata,
+    .token.punctuation {
+        color: #908caa;
+    }
+
+    .token.delimiter,
+    .token.important,
+    .token.atrule,
+    .token.operator,
+    .token.keyword {
+        color: #3e8fb0;
+    }
+
+    .token.tag,
+    .token.tag .punctuation,
+    .token.doctype,
+    .token.variable,
+    .token.regex,
+    .token.class-name,
+    .token.selector,
+    .token.inserted {
+        color: #9ccfd8;
+    }
+
+    .token.boolean,
+    .token.entity,
+    .token.number,
+    .token.symbol,
+    .token.function {
+        color: #ea9a97;
+    }
+
+    .token.string,
+    .token.char,
+    .token.property,
+    .token.attr-value,
+    .token.attr-value .punctuation {
+        color: #f6c177;
+    }
+
+    .token.parameter,
+    .token.url,
+    .token.name,
+    .token.attr-name,
+    .token.builtin {
+        color: #c4a7e7;
+    }
+
+    .token.deleted {
+        color: #eb6f92;
+    }
+
+    /* Insertions & deletions */
+    .token.inserted {
+        background: rgba(156, 207, 216, 0.12);
+    }
+
+    .token.deleted {
+        background: rgba(235, 111, 146, 0.12);
+    }
+
+    /* Line highlighting */
+    pre[data-line] {
+        position: relative;
+    }
+
+    pre[class*="language-"] > code[class*="language-"] {
+        position: relative;
+        z-index: 1;
+    }
+
+    .line-highlight,
+    .highlight-lines .highlighted {
+        position: absolute;
+        left: 0;
+        right: 0;
+        padding: inherit 0;
+        margin-top: 1em;
+
+        background: #44415a;
+        box-shadow: inset 5px 0 0 #e0def4;
+
+        z-index: 0;
+
+        pointer-events: none;
+
+        line-height: inherit;
+        white-space: pre;
+    }
+}
+
+// * For Light Mode  *///
+[data-theme="light"] {
+    /**
+ * MIT License
+ * Rosé Pine Theme
+ * https://github.com/rose-pine
+ * Ported for PrismJS by fvrests [@fvrests]
  */
 
-code[class*="language-"],
-pre[class*="language-"],
-pre {
-  color: #f8f8f2;
-  background: hsl(220, 13%, 18%) !important;
-  font-family: 'Jetbrains Mono', ' Source Code Pro', Menlo, Consolas, ' DejaVu Sans Mono', monospace;
-  font-weight: 400;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.55;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  // font-size: 1rem;
-  -ms-hyphens: none;
-  hyphens: none;
-
-
-}
-
-
-/* Selection */
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] *::-moz-selection,
-pre[class*="language-"] *::-moz-selection {
-  background: hsl(220, 13%, 28%);
-  color: inherit;
-  text-shadow: none;
-}
-
-code[class*="language-"]::selection,
-code[class*="language-"] *::selection,
-pre[class*="language-"] *::selection {
-  background: hsl(220, 13%, 28%);
-  color: inherit;
-  text-shadow: none;
-}
-
-/* Code blocks */
-pre[class*="language-"] {
-  padding: 1em;
-  margin: 0.5em 0;
-  overflow: auto;
-  border-radius: 0.3em;
-}
-
-/* Inline code */
-:not(pre)>code[class*="language-"] {
-  padding: 0.2em 0.3em;
-  border-radius: 0.3em;
-  white-space: normal;
-}
-
-/* Print */
-@media print {
-
-  code[class*="language-"],
-  pre[class*="language-"] {
-    text-shadow: none;
-  }
-}
-
-.token.comment,
-.token.prolog,
-.token.cdata {
-  color: hsl(220, 10%, 40%);
-}
-
-.token.doctype,
-.token.punctuation,
-.token.entity {
-  color: hsl(220, 14%, 71%);
-}
-
-.token.attr-name,
-.token.class-name,
-.token.boolean,
-.token.constant,
-.token.number,
-.token.atrule {
-  color: hsl(29, 54%, 61%);
-}
-
-.token.keyword {
-  color: hsl(286, 60%, 67%);
-}
-
-.token.property,
-.token.tag,
-.token.symbol,
-.token.deleted,
-.token.important {
-  color: hsl(355, 65%, 65%);
-}
-
-.token.selector,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted,
-.token.regex,
-.token.attr-value,
-.token.attr-value>.token.punctuation {
-  color: hsl(95, 38%, 62%);
-}
-
-.token.variable,
-.token.operator,
-.token.function {
-  color: hsl(207, 82%, 66%);
-}
-
-.token.url {
-  color: hsl(187, 47%, 55%);
-}
-
-/* HTML overrides */
-.token.attr-value>.token.punctuation.attr-equals,
-.token.special-attr>.token.attr-value>.token.value.css {
-  color: hsl(220, 14%, 71%);
-}
-
-/* CSS overrides */
-.language-css .token.selector {
-  color: hsl(355, 65%, 65%);
-}
-
-.language-css .token.property {
-  color: hsl(220, 14%, 71%);
-}
-
-.language-css .token.function,
-.language-css .token.url>.token.function {
-  color: hsl(187, 47%, 55%);
-}
-
-.language-css .token.url>.token.string.url {
-  color: hsl(95, 38%, 62%);
-}
-
-.language-css .token.important,
-.language-css .token.atrule .token.rule {
-  color: hsl(286, 60%, 67%);
-}
-
-/* JS overrides */
-.language-javascript .token.operator {
-  color: hsl(286, 60%, 67%);
-}
-
-.language-javascript .token.template-string>.token.interpolation>.token.interpolation-punctuation.punctuation {
-  color: hsl(5, 48%, 51%);
-}
-
-/* JSON overrides */
-.language-json .token.operator {
-  color: hsl(220, 14%, 71%);
-}
-
-.language-json .token.null.keyword {
-  color: hsl(29, 54%, 61%);
-}
-
-/* MD overrides */
-.language-markdown .token.url,
-.language-markdown .token.url>.token.operator,
-.language-markdown .token.url-reference.url>.token.string {
-  color: hsl(220, 14%, 71%);
-}
-
-.language-markdown .token.url>.token.content {
-  color: hsl(207, 82%, 66%);
-}
-
-.language-markdown .token.url>.token.url,
-.language-markdown .token.url-reference.url {
-  color: hsl(187, 47%, 55%);
-}
-
-.language-markdown .token.blockquote.punctuation,
-.language-markdown .token.hr.punctuation {
-  color: hsl(220, 10%, 40%);
-  font-style: italic;
-}
-
-.language-markdown .token.code-snippet {
-  color: hsl(95, 38%, 62%);
-}
-
-.language-markdown .token.bold .token.content {
-  color: hsl(29, 54%, 61%);
-}
-
-.language-markdown .token.italic .token.content {
-  color: hsl(286, 60%, 67%);
-}
-
-.language-markdown .token.strike .token.content,
-.language-markdown .token.strike .token.punctuation,
-.language-markdown .token.list.punctuation,
-.language-markdown .token.title.important>.token.punctuation {
-  color: hsl(355, 65%, 65%);
-}
-
-/* General */
-.token.bold {
-  font-weight: bold;
-}
-
-.token.comment,
-.token.italic {
-  font-style: italic;
-}
-
-.token.entity {
-  cursor: help;
-}
-
-.token.namespace {
-  opacity: 0.8;
-}
-
-/* Plugin overrides */
-/* Selectors should have higher specificity than those in the plugins' default stylesheets */
-
-/* Show Invisibles plugin overrides */
-.token.token.tab:not(:empty):before,
-.token.token.cr:before,
-.token.token.lf:before,
-.token.token.space:before {
-  color: hsla(220, 14%, 71%, 0.15);
-  text-shadow: none;
-}
-
-/* Toolbar plugin overrides */
-/* Space out all buttons and move them away from the right edge of the code block */
-div.code-toolbar>.toolbar.toolbar>.toolbar-item {
-  margin-right: 0.4em;
-}
-
-/* Styling the buttons */
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>button,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>a,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>span {
-  background: hsl(220, 13%, 26%);
-  color: hsl(220, 9%, 55%);
-  padding: 0.1em 0.4em;
-  border-radius: 0.3em;
-}
-
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>button:hover,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>button:focus,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>a:hover,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>a:focus,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>span:hover,
-div.code-toolbar>.toolbar.toolbar>.toolbar-item>span:focus {
-  background: hsl(220, 13%, 28%);
-  color: hsl(220, 14%, 71%);
-}
-
-/* Line Highlight plugin overrides */
-/* The highlighted line itself */
-.line-highlight.line-highlight {
-  background: hsla(220, 100%, 80%, 0.04);
-}
-
-/* Default line numbers in Line Highlight plugin */
-.line-highlight.line-highlight:before,
-.line-highlight.line-highlight[data-end]:after {
-  background: hsl(220, 13%, 26%);
-  color: hsl(220, 14%, 71%);
-  padding: 0.1em 0.6em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
-  /* same as Toolbar plugin default */
-}
-
-/* Hovering over a linkable line number (in the gutter area) */
-/* Requires Line Numbers plugin as well */
-pre[id].linkable-line-numbers.linkable-line-numbers span.line-numbers-rows>span:hover:before {
-  background-color: hsla(220, 100%, 80%, 0.04);
-}
-
-/* Line Numbers and Command Line plugins overrides */
-/* Line separating gutter from coding area */
-.line-numbers.line-numbers .line-numbers-rows,
-.command-line .command-line-prompt {
-  border-right-color: hsla(220, 14%, 71%, 0.15);
-}
-
-/* Stuff in the gutter */
-.line-numbers .line-numbers-rows>span:before,
-.command-line .command-line-prompt>span:before {
-  color: hsl(220, 14%, 45%);
-}
-
-/* Match Braces plugin overrides */
-/* Note: Outline colour is inherited from the braces */
-.rainbow-braces .token.token.punctuation.brace-level-1,
-.rainbow-braces .token.token.punctuation.brace-level-5,
-.rainbow-braces .token.token.punctuation.brace-level-9 {
-  color: hsl(355, 65%, 65%);
-}
-
-.rainbow-braces .token.token.punctuation.brace-level-2,
-.rainbow-braces .token.token.punctuation.brace-level-6,
-.rainbow-braces .token.token.punctuation.brace-level-10 {
-  color: hsl(95, 38%, 62%);
-}
-
-.rainbow-braces .token.token.punctuation.brace-level-3,
-.rainbow-braces .token.token.punctuation.brace-level-7,
-.rainbow-braces .token.token.punctuation.brace-level-11 {
-  color: hsl(207, 82%, 66%);
-}
-
-.rainbow-braces .token.token.punctuation.brace-level-4,
-.rainbow-braces .token.token.punctuation.brace-level-8,
-.rainbow-braces .token.token.punctuation.brace-level-12 {
-  color: hsl(286, 60%, 67%);
-}
-
-/* Diff Highlight plugin overrides */
-/* Taken from https://github.com/atom/github/blob/master/styles/variables.less */
-pre.diff-highlight>code .token.token.deleted:not(.prefix),
-pre>code.diff-highlight .token.token.deleted:not(.prefix) {
-  background-color: hsla(353, 100%, 66%, 0.15);
-}
-
-pre.diff-highlight>code .token.token.deleted:not(.prefix)::-moz-selection,
-pre.diff-highlight>code .token.token.deleted:not(.prefix) *::-moz-selection,
-pre>code.diff-highlight .token.token.deleted:not(.prefix)::-moz-selection,
-pre>code.diff-highlight .token.token.deleted:not(.prefix) *::-moz-selection {
-  background-color: hsla(353, 95%, 66%, 0.25);
-}
-
-pre.diff-highlight>code .token.token.deleted:not(.prefix)::selection,
-pre.diff-highlight>code .token.token.deleted:not(.prefix) *::selection,
-pre>code.diff-highlight .token.token.deleted:not(.prefix)::selection,
-pre>code.diff-highlight .token.token.deleted:not(.prefix) *::selection {
-  background-color: hsla(353, 95%, 66%, 0.25);
-}
-
-pre.diff-highlight>code .token.token.inserted:not(.prefix),
-pre>code.diff-highlight .token.token.inserted:not(.prefix) {
-  background-color: hsla(137, 100%, 55%, 0.15);
-}
-
-pre.diff-highlight>code .token.token.inserted:not(.prefix)::-moz-selection,
-pre.diff-highlight>code .token.token.inserted:not(.prefix) *::-moz-selection,
-pre>code.diff-highlight .token.token.inserted:not(.prefix)::-moz-selection,
-pre>code.diff-highlight .token.token.inserted:not(.prefix) *::-moz-selection {
-  background-color: hsla(135, 73%, 55%, 0.25);
-}
-
-pre.diff-highlight>code .token.token.inserted:not(.prefix)::selection,
-pre.diff-highlight>code .token.token.inserted:not(.prefix) *::selection,
-pre>code.diff-highlight .token.token.inserted:not(.prefix)::selection,
-pre>code.diff-highlight .token.token.inserted:not(.prefix) *::selection {
-  background-color: hsla(135, 73%, 55%, 0.25);
-}
-
-/* Previewers plugin overrides */
-/* Based on https://github.com/atom-community/atom-ide-datatip/blob/master/styles/atom-ide-datatips.less and https://github.com/atom/atom/blob/master/packages/one-dark-ui */
-/* Border around popup */
-.prism-previewer.prism-previewer:before,
-.prism-previewer-gradient.prism-previewer-gradient div {
-  border-color: hsl(224, 13%, 17%);
-}
-
-/* Angle and time should remain as circles and are hence not included */
-.prism-previewer-color.prism-previewer-color:before,
-.prism-previewer-gradient.prism-previewer-gradient div,
-.prism-previewer-easing.prism-previewer-easing:before {
-  border-radius: 0.3em;
-}
-
-/* Triangles pointing to the code */
-.prism-previewer.prism-previewer:after {
-  border-top-color: hsl(224, 13%, 17%);
-}
-
-.prism-previewer-flipped.prism-previewer-flipped.after {
-  border-bottom-color: hsl(224, 13%, 17%);
-}
-
-/* Background colour within the popup */
-.prism-previewer-angle.prism-previewer-angle:before,
-.prism-previewer-time.prism-previewer-time:before,
-.prism-previewer-easing.prism-previewer-easing {
-  background: hsl(219, 13%, 22%);
-}
-
-/* For angle, this is the positive area (eg. 90deg will display one quadrant in this colour) */
-/* For time, this is the alternate colour */
-.prism-previewer-angle.prism-previewer-angle circle,
-.prism-previewer-time.prism-previewer-time circle {
-  stroke: hsl(220, 14%, 71%);
-  stroke-opacity: 1;
-}
-
-/* Stroke colours of the handle, direction point, and vector itself */
-.prism-previewer-easing.prism-previewer-easing circle,
-.prism-previewer-easing.prism-previewer-easing path,
-.prism-previewer-easing.prism-previewer-easing line {
-  stroke: hsl(220, 14%, 71%);
-}
-
-/* Fill colour of the handle */
-.prism-previewer-easing.prism-previewer-easing circle {
-  fill: transparent;
+    code[class*="language-"],
+    pre[class*="language-"] {
+        color: #575279;
+        background: #faf4ed;
+        @media print {
+            text-shadow: none;
+        }
+    }
+
+    /* Selection */
+    code[class*="language-"]::-moz-selection,
+    pre[class*="language-"]::-moz-selection,
+    code[class*="language-"] ::-moz-selection,
+    pre[class*="language-"] ::-moz-selection {
+        background: #dfdad9;
+    }
+
+    code[class*="language-"]::selection,
+    pre[class*="language-"]::selection,
+    code[class*="language-"] ::selection,
+    pre[class*="language-"] ::selection {
+        background: #dfdad9;
+    }
+
+    /* Code (block & inline) */
+    :not(pre) > code[class*="language-"],
+    pre[class*="language-"] {
+        color: #575279;
+        background: #faf4ed;
+    }
+
+    /* Code blocks */
+    pre[class*="language-"] {
+        padding: 1em;
+        margin: 0.5em 0;
+        overflow: auto;
+    }
+
+    /* Inline code */
+    :not(pre) > code[class*="language-"] {
+        padding: 0.1em;
+        border-radius: 0.3em;
+        white-space: normal;
+        color: #575279;
+        background: #faf4ed;
+    }
+
+    /* Text style & opacity */
+    .token.entity {
+        cursor: help;
+    }
+
+    .token.important,
+    .token.bold {
+        font-weight: bold;
+    }
+
+    .token.italic,
+    .token.selector,
+    .token.doctype,
+    .token.attr-name,
+    .token.inserted,
+    .token.deleted,
+    .token.comment,
+    .token.prolog,
+    .token.cdata,
+    .token.constant,
+    .token.parameter,
+    .token.url {
+        font-style: italic;
+    }
+
+    .token.url {
+        text-decoration: underline;
+    }
+
+    .namespace {
+        opacity: 0.7;
+    }
+
+    /* Syntax highlighting */
+    .token.constant {
+        color: #575279;
+    }
+
+    .token.comment,
+    .token.prolog,
+    .token.cdata,
+    .token.punctuation {
+        color: #797593;
+    }
+
+    .token.delimiter,
+    .token.important,
+    .token.atrule,
+    .token.operator,
+    .token.keyword {
+        color: #286983;
+    }
+
+    .token.tag,
+    .token.tag .punctuation,
+    .token.doctype,
+    .token.variable,
+    .token.regex,
+    .token.class-name,
+    .token.selector,
+    .token.inserted {
+        color: #56949f;
+    }
+
+    .token.boolean,
+    .token.entity,
+    .token.number,
+    .token.symbol,
+    .token.function {
+        color: #d7827e;
+    }
+
+    .token.string,
+    .token.char,
+    .token.property,
+    .token.attr-value,
+    .token.attr-value .punctuation {
+        color: #ea9d34;
+    }
+
+    .token.parameter,
+    .token.url,
+    .token.name,
+    .token.attr-name,
+    .token.builtin {
+        color: #907aa9;
+    }
+
+    .token.deleted {
+        color: #b4637a;
+    }
+
+    /* Insertions & deletions */
+    .token.inserted {
+        background: rgba(86, 148, 159, 0.12);
+    }
+
+    .token.deleted {
+        background: rgba(180, 99, 122, 0.12);
+    }
+
+    /* Line highlighting */
+    pre[data-line] {
+        position: relative;
+    }
+
+    pre[class*="language-"] > code[class*="language-"] {
+        position: relative;
+        z-index: 1;
+    }
+
+    .line-highlight,
+    .highlight-lines .highlighted {
+        position: absolute;
+        left: 0;
+        right: 0;
+        padding: inherit 0;
+        margin-top: 1em;
+
+        background: #dfdad9;
+        box-shadow: inset 5px 0 0 #575279;
+
+        z-index: 0;
+
+        pointer-events: none;
+
+        line-height: inherit;
+        white-space: pre;
+    }
 }
