--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,7 +11,7 @@ $light-color-variant: #d7827e;
 $light-table-color: #e5e9f0;
 
 /* dark theme colors */
-$dark-background: #232136;
+$dark-background: #191724;
 $dark-background-secondary: #3b3d42;
 $dark-color: #d8dee9;
 $dark-color-secondary: #8fbcbb;
@@ -31,3 +31,18 @@ $media-size-tablet: "(max-width: 900px)";
 
 /* Content */
 $max-width: 1200px;
+
+/* Rose Pine Accents */
+$dark--rp-love: #eb6f92;
+$dark--rp-gold: #f6c177;
+$dark--rp-rose: #ebbcba;
+$dark--rp-pine: #31748f;
+$dark--rp-foam: #9ccfd8;
+$dark--rp-iris: #c4a7e7;
+
+$light--rp-love: #b4637a;
+$light--rp-gold: #ea9d34;
+$light--rp-rose: #d7827e;
+$light--rp-pine: #286983;
+$light--rp-foam: #56949f;
+$light--rp-iris: #907aa9;
