--- a/assets/scss/_logo.scss
+++ b/assets/scss/_logo.scss
@@ -4,7 +4,10 @@
   text-decoration: none;
   font-weight: bold;
   font-display: auto;
-  font-family: "Jetbrains Mono", monospace, monospace;
+  /* font-family: "Cascadia Code, monospace, monospace; */
+  font-family:
+      ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
+  font-feature-settings: "calt", "liga", "ss01";
 
   img {
     height: 44px;
