--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -18,16 +18,34 @@
     }
 
     a {
-        /* color: inherit; */
-        font-weight: bold;
+        /* color: $dark-color-secondary; */
+        font-weight: semibold;
 
-        &::before {
+        @media (prefers-color-scheme: dark) {
+            color: $dark-color-secondary;
+        }
+
+        @media (prefers-color-scheme: light) {
+            color: $light-color-secondary;
+        }
+
+
+        [data-theme="dark"] & {
+            color: $dark-color-secondary;
+        }
+
+        [data-theme="light"] & {
+            color: $light-color-secondary;
+        }
+
+
+        /* &::before {
             content: "[";
         }
 
         &::after {
             content: "]";
-        }
+        } */
     }
 
     &-date {
@@ -37,7 +55,7 @@
     }
 
     &-title {
-        font-size: 2.625rem;
+        /* font-size: 2.625rem; */
         margin: 0 0 20px;
 
         @media #{$media-size-phone} {
