--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -1,249 +1,283 @@
 .post {
-  width: 100%;
-  max-width: $max-width;
-  text-align: left;
-  padding: 20px;
-  margin: 20px auto;
-  display: flexbox;
-  justify-content: space-between;
-
-  @media #{$media-size-tablet} {
-    max-width: 600px;
-    display: block
-  }
-
-  @media #{$media-size-phone} {
-    max-width: 600px;
-    display: block
-  }
-
-
-  &-date {
-    &:after {
-      content: '—';
-    }
-  }
-
-  &-title {
-    font-size: 2.625rem;
-    margin: 0 0 20px;
-
-    @media #{$media-size-phone} {
-      font-size: 2rem;
-    }
-
-    a {
-      text-decoration: none;
-    }
-  }
-
-  &-tags {
-    display: block;
-    margin-bottom: 20px;
-    font-size: 1rem;
-    opacity: 0.5;
-
-    a {
-      text-decoration: none;
-    }
-  }
-
-  &-content {
-    margin-top: 30px;
-    max-width: $max-width;
-  }
-
-  &-cover {
-    border-radius: 8px;
-    // padding: 40px;
     width: 100%;
-    // overflow: hidden;
+    max-width: $max-width;
+    text-align: left;
+    padding: 20px;
+    margin: 20px auto;
+    display: flexbox;
+    justify-content: space-between;
 
     @media #{$media-size-tablet} {
-      margin: 20px 0;
-      width: 100%;
-    }
-  }
-
-  &-excerpt {
-    color: grey;
-    font-style: italic;
-  }
-
-  &-info {
-    margin-top: 30px;
-    font-size: 0.8rem;
-    line-height: normal;
-    @include dimmed;
-
-    p {
-      margin: 0.8em 0;
+        max-width: 600px;
+        display: block;
     }
 
-    a:hover {
-      border-bottom: 1px solid white;
+    @media #{$media-size-phone} {
+        max-width: 600px;
+        display: block;
     }
 
-    svg {
-      margin-right: 0.8em;
+    a {
+        /* color: $dark-color-secondary; */
+        font-weight: semibold;
+
+        @media (prefers-color-scheme: dark) {
+            color: $dark-color-secondary;
+        }
+
+        @media (prefers-color-scheme: light) {
+            color: $light-color-secondary;
+        }
+
+
+        [data-theme="dark"] & {
+            color: $dark-color-secondary;
+        }
+
+        [data-theme="light"] & {
+            color: $light-color-secondary;
+        }
+
+
+        /* &::before {
+            content: "[";
+        }
+
+        &::after {
+            content: "]";
+        } */
     }
 
-    .tag {
-      margin-right: 0.5em;
-
-      &::before {
-        content: "#";
-      }
+    &-date {
+        &:after {
+            content: "—";
+        }
     }
 
-    .feather {
-      display: inline-block;
-      vertical-align: -.125em;
-      width: 1em;
-      height: 1em;
+    &-title {
+        /* font-size: 2.625rem; */
+        margin: 0 0 20px;
+
+        @media #{$media-size-phone} {
+            font-size: 2rem;
+        }
+
+        a {
+            text-decoration: none;
+
+            &::before,
+            &::after {
+                content: "";
+            }
+        }
     }
-  }
 
-  &-audio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
+    &-tags {
+        display: block;
+        margin-bottom: 20px;
+        font-size: 1rem;
+        opacity: 0.5;
 
-    audio {
-      width: 90%;
+        a {
+            text-decoration: none;
+        }
     }
-  }
 
-  .flag {
-    border-radius: 50%;
-    margin: 0 5px;
-  }
+    &-content {
+        margin-top: 30px;
+        max-width: $max-width;
+    }
+
+    &-cover {
+        border-radius: 8px;
+        // padding: 40px;
+        width: 100%;
+        // overflow: hidden;
+
+        @media #{$media-size-tablet} {
+            margin: 20px 0;
+            width: 100%;
+        }
+    }
+
+    &-excerpt {
+        color: grey;
+        font-style: italic;
+    }
+
+    &-info {
+        margin-top: 30px;
+        font-size: 0.8rem;
+        line-height: normal;
+        @include dimmed;
+
+        p {
+            margin: 0.8em 0;
+        }
+
+        a:hover {
+            border-bottom: 1px solid white;
+        }
+
+        svg {
+            margin-right: 0.8em;
+        }
+
+        .tag {
+            margin-right: 0.5em;
+
+            &::before {
+                content: "#";
+            }
+        }
+
+        .feather {
+            display: inline-block;
+            vertical-align: -0.125em;
+            width: 1em;
+            height: 1em;
+        }
+    }
+
+    &-audio {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 20px;
+
+        audio {
+            width: 90%;
+        }
+    }
+
+    .flag {
+        border-radius: 50%;
+        margin: 0 5px;
+    }
 }
 
 .pagination {
-  margin-top: 20px;
+    margin-top: 20px;
 
-  &__title {
-    display: flex;
-    text-align: center;
-    position: relative;
-    margin: 20px 0;
+    &__title {
+        display: flex;
+        text-align: center;
+        position: relative;
+        margin: 20px 0;
 
-    &-h {
-      text-align: center;
-      margin: 0 auto;
-      padding: 5px 10px;
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      text-decoration: none;
-      letter-spacing: 0.1em;
-      z-index: 1;
-      // Default
-      background: $light-background;
-      color: $light-color-secondary;
+        &-h {
+            text-align: center;
+            margin: 0 auto;
+            padding: 5px 10px;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            letter-spacing: 0.1em;
+            z-index: 1;
+            // Default
+            background: $light-background;
+            color: $light-color-secondary;
 
-      @media (prefers-color-scheme: dark) {
-        background: $dark-background;
-        color: $dark-color-secondary;
-      }
+            @media (prefers-color-scheme: dark) {
+                background: $dark-background;
+                color: $dark-color-secondary;
+            }
 
-      @media (prefers-color-scheme: light) {
-        background: $light-background;
-        color: $light-color-secondary;
-      }
+            @media (prefers-color-scheme: light) {
+                background: $light-background;
+                color: $light-color-secondary;
+            }
 
-      [data-theme=dark] & {
-        background: $dark-background;
-        color: $dark-color-secondary;
-      }
+            [data-theme="dark"] & {
+                background: $dark-background;
+                color: $dark-color-secondary;
+            }
 
-      [data-theme=light] & {
-        background: $light-background;
-        color: $light-color-secondary;
-      }
+            [data-theme="light"] & {
+                background: $light-background;
+                color: $light-color-secondary;
+            }
+        }
+
+        hr {
+            position: absolute;
+            left: 0;
+            right: 0;
+            width: 100%;
+            margin-top: 15px;
+            z-index: 0;
+        }
     }
 
-    hr {
-      position: absolute;
-      left: 0;
-      right: 0;
-      width: 100%;
-      margin-top: 15px;
-      z-index: 0;
-    }
-  }
+    &__buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-  &__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    a {
-      text-decoration: none;
-      font-weight: bold;
+        a {
+            text-decoration: none;
+            font-weight: bold;
+        }
     }
-  }
 }
 
 .button {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-  font-weight: 600;
-  border-radius: 8px;
-  max-width: 40%;
-  padding: 0;
-  cursor: pointer;
-  appearance: none;
-  // Default
-  background: $light-background-secondary;
-
-  @media (prefers-color-scheme: dark) {
-    background: $dark-background-secondary;
-  }
-
-  @media (prefers-color-scheme: light) {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 8px;
+    max-width: 40%;
+    padding: 0;
+    cursor: pointer;
+    appearance: none;
+    // Default
     background: $light-background-secondary;
-  }
 
-  [data-theme=dark] & {
-    background: $dark-background-secondary;
-  }
+    @media (prefers-color-scheme: dark) {
+        background: $dark-background-secondary;
+    }
 
-  [data-theme=light] & {
-    background: $light-background-secondary;
-  }
+    @media (prefers-color-scheme: light) {
+        background: $light-background-secondary;
+    }
 
-  +.button {
-    margin-left: 10px;
+    [data-theme="dark"] & {
+        background: $dark-background-secondary;
+    }
 
-  }
+    [data-theme="light"] & {
+        background: $light-background-secondary;
+    }
 
-  a {
-    display: flex;
-    padding: 8px 16px;
-    text-decoration: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
+    + .button {
+        margin-left: 10px;
+    }
 
-  &__text {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
+    a {
+        display: flex;
+        padding: 8px 16px;
+        text-decoration: none;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 
-  &.next .button__icon {
-    margin-left: 8px;
-  }
+    &__text {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 
-  &.previous .button__icon {
-    margin-right: 8px;
-  }
+    &.next .button__icon {
+        margin-left: 8px;
+    }
+
+    &.previous .button__icon {
+        margin-right: 8px;
+    }
 }
 
 // // https://flexboxpatterns.com/side-bar
@@ -277,9 +311,6 @@
 //   top: 120px;
 //   transition: all 0.5s;
 //   background-color: $light-table-color;
-
-
-
 
 //   &-title {
 //     font-family: "Jetbrains Mono", monospace;
