Update fonts and color variables, restyle headings and code blocks

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,7 +11,8 @@ $light-color-variant: #d7827e;
 $light-table-color: #e5e9f0;
 
 /* dark theme colors */
-$dark-background: #191724;
+/* $dark-background: #222226; */
+$dark-background: #1d2021;
 $dark-background-secondary: #3b3d42;
 $dark-color: #d8dee9;
 $dark-color-secondary: #8fbcbb;
@@ -40,9 +41,13 @@ $dark--rp-pine: #31748f;
 $dark--rp-foam: #9ccfd8;
 $dark--rp-iris: #c4a7e7;
 
+$dark--gb-aqua: #8ec07c;
+
 $light--rp-love: #b4637a;
 $light--rp-gold: #ea9d34;
 $light--rp-rose: #d7827e;
 $light--rp-pine: #286983;
 $light--rp-foam: #56949f;
 $light--rp-iris: #907aa9;
+
+$light--gb-aqua: #689d6a;
