--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 0;
     font-family:
-        "IBM Plex Sans",
+        "Inter",
         -apple-system,
         BlinkMacSystemFont,
         "Roboto",
@@ -28,8 +28,6 @@ body {
     line-height: 1.54;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    font-feature-settings:
-        "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
     -webkit-overflow-scrolling: touch;
     -webkit-text-size-adjust: 100%;
 
@@ -66,6 +64,7 @@ body {
     }
 }
 
+h1,
 h2,
 h3,
 h4,
@@ -74,6 +73,7 @@ h6 {
     display: flex;
     align-items: center;
     line-height: 1.3;
+    font-family: "Spectral";
 }
 
 h1 {
@@ -88,16 +88,15 @@ h1 {
 }
 
 h2 {
-    font-size:  3.052rem;
+    font-size: 3.052rem;
     /* margin-top: 2.5em; */
 
-
     [data-theme="dark"] & {
-        color: $dark--rp-iris;
+        color: $dark--gb-aqua;
     }
 
     [data-theme="light"] & {
-        color: $light--rp-iris;
+        color: $light--gb-aqua;
     }
 }
 
@@ -105,11 +104,11 @@ h3 {
     font-size: 2.441rem;
 
     [data-theme="dark"] & {
-        color: $dark--rp-love;
+        color: $dark--rp-iris;
     }
 
     [data-theme="light"] & {
-        color: $light--rp-love;
+        color: $light--rp-iris;
     }
 }
 
