--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -3,9 +3,9 @@ pre,
 code[class*="language-"],
 pre[class*="language-"] {
     font-family:
-        ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+        ui-monospace, "Jetbrains Mono", "Source Code Pro", Menlo, Consolas,
         "DejaVu Sans Mono", monospace;
-    font-feature-settings: "calt", "liga", "ss01";
+    font-feature-settings: "calt", "liga";
     background: none !important;
     text-align: left;
     white-space: pre;
