Update SCSS variables and styles for consistency
- Use $max-width in header instead of fixed width - Set font size for
code blocks in Prism styles - Switch dark background variable to #222226
- Update table column header from "Official/Community" to "Ownership" in
article

--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -6,6 +6,7 @@ pre[class*="language-"] {
         ui-monospace, "Jetbrains Mono", "Source Code Pro", Menlo, Consolas,
         "DejaVu Sans Mono", monospace;
     font-feature-settings: "calt", "liga";
+    font-size: 0.9rem;
     background: none !important;
     text-align: left;
     white-space: pre;
@@ -20,6 +21,7 @@ pre[class*="language-"] {
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
+
 }
 
 [data-theme="dark"] {
