--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,8 +11,8 @@ $light-color-variant: #d7827e;
 $light-table-color: #e5e9f0;
 
 /* dark theme colors */
-/* $dark-background: #222226; */
-$dark-background: #1d2021;
+$dark-background: #222226;
+/* $dark-background: #1d2021; */
 $dark-background-secondary: #3b3d42;
 $dark-color: #d8dee9;
 $dark-color-secondary: #8fbcbb;
